[package]
name = "pinocchio_amm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib","cdylib"]

[dependencies]
pinocchio = "0.8.4"
pinocchio-associated-token-account = "0.1.1"
pinocchio-pubkey = "0.3.0"
pinocchio-system = "0.2.3"
pinocchio-token = "0.3.0"

[dev-dependencies]
solana-sdk = "1.18"
spl-token = "4.0"
spl-associated-token-account = "2.3"

[features]
no-entrypoint = []
std = []
test-default = ["no-entrypoint", "std"]

[[test]]
name = "unit_tests"
